--- a/index.html
+++ b/index.html
@@ -89,6 +89,47 @@
     <p style="color: white; margin-top: 0;">*while supplies last</p>
 </div>
 <br/><br/>
+
+<div class="section" style="padding-top: 2rem;">
+    <div class="container">
+        <div class="row">
+            <div class="column">
+                <div class="row">
+                    <div class="column">
+                        <!--<img src="img/2022 tee.jpg" style="height: 150px;" />-->
+                    </div>
+                </div>
+                <h5 style="margin: 0; font-size: 2.1rem;">👉 CLASS OF 2023 T-Shirt 👈</h5>
+                <p style="margin: 0; font-size: x-small">(Gildan Softstyle® T-Shirt)</p>
+                <b style="font-size: x-small">$.90 of the cost of the shirt is to offset Paypal fees</b>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="column">
+            <center>
+                <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                    <input type="hidden" name="cmd" value="_s-xclick">
+                    <input type="hidden" name="hosted_button_id" value="5TNJZNCEG38A2">
+                    <table>
+                    <tr><td><input type="hidden" name="on0" value="Size">Size</td></tr><tr><td><select name="os0">
+                    <option value="S">S $12.90 USD</option>
+                    <option value="M">M $12.90 USD</option>
+                    <option value="L">L $12.90 USD</option>
+                    <option value="XL">XL $12.90 USD</option>
+                    <option value="XXL">XXL $12.90 USD</option>
+                    </select> </td></tr>
+                    <tr><td><input type="hidden" name="on1" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
+                    </table>
+                    <input type="hidden" name="currency_code" value="USD">
+                    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                    <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                </form>
+            </center>
+        </div>
+    </div>
+</div>
+
 <div class="section" style="padding-top: 0rem;">
     <div class="container">
         <div class="row">
