--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="column">
                 <div class="row">
                     <div class="column">
-                        <!--<img src="img/2022 tee.jpg" style="height: 150px;" />-->
+                        <img src="img/classof2023tee.jpg" style="height: 150px;" />
                     </div>
                 </div>
                 <h5 style="margin: 0; font-size: 2.1rem;">👉 CLASS OF 2023 T-Shirt 👈</h5>
