--- a/index.html
+++ b/index.html
@@ -94,8 +94,11 @@
         <div class="row">
             <div class="column">
                 <div class="row">
-                    <div class="column">
-                        <img src="img/classof2023tee.jpg" style="height: 150px;" />
+                    <div class="column one-half">
+                        <img src="img/classof2023tee.jpg" style="height: 90px;"/>
+                    </div>
+                    <div class="column one-half">
+                        <img src="img/Back.jpg" style="height: 90px;" />
                     </div>
                 </div>
                 <h5 style="margin: 0; font-size: 2.1rem;">👉 CLASS OF 2023 T-Shirt 👈</h5>
