--- a/index.html
+++ b/index.html
@@ -92,18 +92,22 @@
 <div class="section" style="padding-top: 2rem;">
     <div class="container">
         <div class="row">
-            <div class="column">
-                <div class="row">
-                    <div class="column one-half">
-                        <img src="img/classof2023tee.jpg" style="height: 90px;"/>
+            <div class="column one-half">
+                <center>
+                    <div class="row">
+                        <div class="column one-half">
+                            <img src="img/classof2023tee.jpg" style="height: 90px;"/>
+                        </div>
+                        <div class="column one-half">
+                            <img src="img/Back.JPG" style="height: 90px;" />
+                        </div>
                     </div>
-                    <div class="column one-half">
-                        <img src="img/Back.jpg" style="height: 90px;" />
+                    <div class="row">
+                        <h5 style="margin: 0; font-size: 2.1rem;">👉 CLASS OF 2023 T-Shirt 👈</h5>
+                        <p style="margin: 0; font-size: x-small">(Gildan Softstyle® T-Shirt)</p>
+                        <b style="font-size: x-small">$.90 of the cost of the shirt is to offset Paypal fees</b>
                     </div>
-                </div>
-                <h5 style="margin: 0; font-size: 2.1rem;">👉 CLASS OF 2023 T-Shirt 👈</h5>
-                <p style="margin: 0; font-size: x-small">(Gildan Softstyle® T-Shirt)</p>
-                <b style="font-size: x-small">$.90 of the cost of the shirt is to offset Paypal fees</b>
+                </center>
             </div>
         </div>
     </div>
