--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
 <br/><br/>
 
 <div class="section" style="padding-top: 2rem;">
-    <div class="container">
+    <div class="container" style="display: flex; justify-content: center;">
         <div class="row">
-            <div class="column one-half">
+            <div class="column">
                 <center>
                     <div class="row">
                         <div class="column one-half">
