--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <img src="img/Grey C logo.jpg" style="height: 150px;" />
     <h4 class="hero-heading" style="color: white;">Conestoga Spiritwear</h4>
     <p style="color: white; margin-top: 0; margin-bottom: 0;">All proceeds to benefit Class of 2022, Class of 2023 and T&E Care</p>
-    <p style="color: white; margin-top: 0;">*while supplies last</p>
+    <p style="color: white; margin-top: 0;font-size: 20px;"><b>Limited Quantity, Priced to Sell</b></p>
 </div>
 <br/><br/>
 <div class="section" style="padding-top: 0rem;">
@@ -95,23 +95,289 @@
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <div class="row">
                     <div class="column">
-                        <img src="img/sign.jpeg" style="height: 150px;" />
+                        <img src="img/white tee.jpg" style="height: 150px;" />
                     </div>
                 </div>
-                <h5 style="margin: 0;">Yard Sign</h5>
-                <p style="font-size: large">$12</p>
+                <h5 style="margin: 0;">White Tees</h5>
+                <p style="font-size: large">$15</p>
+            </div>
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <div class="row">
+                    <div class="column">
+                        <img src="img/maroon tee.jpg" style="height: 150px;" />
+                    </div>
+                </div>
+                <h5 style="margin: 0;">Maroon Tees</h5>
+                <p style="font-size: large">$15</p>
+            </div>
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <div class="row">
+                    <div class="column">
+                        <img src="img/hoodie w white.jpg" style="height: 150px;" />
+                    </div>
+                </div>
+                <h5 style="margin: 0;">Hoodie w/ White Imprint</h5>
+                <p style="font-size: large">$25</p>
             </div>
         </div>
 
         <div class="row">
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <center>
-                    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
                         <input type="hidden" name="cmd" value="_s-xclick">
-                        <input type="hidden" name="hosted_button_id" value="Z6SCSB628MLQY">
-                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <input type="hidden" name="hosted_button_id" value="64SXLUGVSVDPS">
+                        <table>
+                        <tr><td><input type="hidden" name="on0" value="Color/Size">Color/Size</td></tr><tr><td><select name="os0">
+                        <option value="S">S $15.00 USD</option>
+                        <option value="M">M $15.00 USD</option>
+                        <option value="L">L $15.00 USD</option>
+                        <option value="XL">XL $15.00 USD</option>
+                        <option value="XXL">XXL $15.00 USD</option>
+                        </select> </td></tr>
+                        <tr><td><input type="hidden" name="on1" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os1" maxlength="200" required></td></tr>
+                        </table>
+                        <input type="hidden" name="currency_code" value="USD">
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                         <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-                    </form>
+                        </form>
+                </center>
+            </div>
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <center>
+                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="SDG5QHE6HF7ZY">
+                        <table>
+                        <tr><td><input type="hidden" name="on0" value="Color/Size">Color/Size</td></tr><tr><td><select name="os0">
+                        <option value="S">S $15.00 USD</option>
+                        <option value="M">M $15.00 USD</option>
+                        <option value="L">L $15.00 USD</option>
+                        <option value="XL">XL $15.00 USD</option>
+                        <option value="XXL">XXL $15.00 USD</option>
+                        </select> </td></tr>
+                        <tr><td><input type="hidden" name="on1" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os1" maxlength="200" required></td></tr>
+                        </table>
+                        <input type="hidden" name="currency_code" value="USD">
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                        </form>
+                </center>
+            </div>
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <center>
+                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="LUAB3FX2ZKJ8N">
+                        <table>
+                        <tr><td><input type="hidden" name="on0" value="Size">Size</td></tr><tr><td><select name="os0">
+                        <option value="M">M $25.00 USD</option>
+                        <option value="L">L $25.00 USD</option>
+                        </select> </td></tr>
+                        <tr><td><input type="hidden" name="on1" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
+                        </table>
+                        <input type="hidden" name="currency_code" value="USD">
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                        </form>
+                </center>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <div class="row">
+                    <div class="column">
+                        <img src="img/hoodie with maroon.jpg" style="height: 150px;" />
+                    </div>
+                </div>
+                <h5 style="margin: 0;">Hoodie w/ Maroon imprint</h5>
+                <p style="font-size: large">$25</p>
+            </div>
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <div class="row">
+                    <div class="column">
+                        <img src="img/maroon tee.jpg" style="height: 150px;" />
+                    </div>
+                </div>
+                <h5 style="margin: 0;">Long-Sleeve Shirt</h5>
+                <p style="font-size: large">$25</p>
+            </div>
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <div class="row">
+                    <div class="column">
+                        <img src="img/grey hat.jpg" style="height: 150px;" />
+                    </div>
+                </div>
+                <h5 style="margin: 0;">Hats</h5>
+                <p style="font-size: large">$20</p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <center>
+                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="AVG8PDC2CC5D6">
+                        <table>
+                        <tr><td><input type="hidden" name="on0" value="Size">Size</td></tr><tr><td><select name="os0">
+                        <option value="S">S $25.00 USD</option>
+                        <option value="XL">XL $25.00 USD</option>
+                        <option value="XXL">XXL $25.00 USD</option>
+                        </select> </td></tr>
+                        <tr><td><input type="hidden" name="on1" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os1" maxlength="200" required></td></tr>
+                        </table>
+                        <input type="hidden" name="currency_code" value="USD">
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                        </form>
+                </center>
+            </div>
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <center>
+                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="Q6V9AVMVXDVSN">
+                        <table>
+                        <tr><td><input type="hidden" name="on0" value="Size">Size</td></tr><tr><td><select name="os0">
+                        <option value="S">S $25.00 USD</option>
+                        <option value="L">L $25.00 USD</option>
+                        <option value="XL">XL $25.00 USD</option>
+                        <option value="XXL">XXL $25.00 USD</option>
+                        </select> </td></tr>
+                        <tr><td><input type="hidden" name="on1" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os1" maxlength="200" required></td></tr>
+                        </table>
+                        <input type="hidden" name="currency_code" value="USD">
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                        </form>
+                </center>
+            </div>
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <center>
+                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="HX5BP9ADS586S">
+                        <table>
+                        <tr><td><input type="hidden" name="on0" value="Color">Color</td></tr><tr><td><select name="os0">
+                        <option value="Black">Black $20.00 USD</option>
+                        <option value="Grey">Grey $20.00 USD</option>
+                        </select> </td></tr>
+                        <tr><td><input type="hidden" name="on1" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os1" maxlength="200" required></td></tr>
+                        </table>
+                        <input type="hidden" name="currency_code" value="USD">
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                        </form>
+                </center>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <div class="row">
+                    <div class="column">
+                        <img src="img/tumbler.png" style="height: 150px;" />
+                    </div>
+                </div>
+                <h5 style="margin: 0;">Tumbler</h5>
+                <p style="font-size: large">$15</p>
+            </div>
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <div class="row">
+                    <div class="column">
+                        <img src="img/stadium seat.png" style="height: 150px;" />
+                    </div>
+                </div>
+                <h5 style="margin: 0;">Stadium Seat</h5>
+                <p style="font-size: large">$25</p>
+            </div>
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <div class="row">
+                    <div class="column">
+                        <img src="img/Lanyard.JPG" style="height: 150px;" />
+                    </div>
+                </div>
+                <h5 style="margin: 0;">Lanyard</h5>
+                <p style="font-size: large">$5</p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <center>
+                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="4FT6AGGRUBF8N">
+                        <table>
+                        <tr><td><input type="hidden" name="on0" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os0" maxlength="200" required></td></tr>
+                        </table>
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                        </form>
+                </center>
+            </div>
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <center>
+                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="MWVLNTQPZFNBY">
+                        <table>
+                        <tr><td><input type="hidden" name="on0" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os0" maxlength="200" required></td></tr>
+                        </table>
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                        </form>
+                </center>
+            </div>
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <center>
+                    <p style="font-size: small">While Supplies Last</p>
+                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="WDSKGXDQ26G5S">
+                        <table>
+                        <tr><td><input type="hidden" name="on0" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os0" maxlength="200" required></td></tr>
+                        </table>
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                        </form>
+                </center>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <div class="row">
+                    <div class="column">
+                        <img src="img/Magnet (1).JPG" style="height: 150px;" />
+                    </div>
+                </div>
+                <h5 style="margin: 0;">Magnet</h5>
+                <p style="font-size: large">$5</p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <center>
+                    <p style="font-size: small">While Supplies Last</p>
+                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="EQ8TCQ9F65TFY">
+                        <table>
+                        <tr><td><input type="hidden" name="on0" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os0" maxlength="200" required></td></tr>
+                        </table>
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                        </form>
                 </center>
             </div>
         </div>
