--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <br/>
     <img src="img/Grey C logo.jpg" style="height: 150px;" />
     <h4 class="hero-heading" style="color: white;">Conestoga Spiritwear</h4>
-    <p style="color: white; margin-top: 0; margin-bottom: 0;">All proceeds to benefit Class of 2022, Class of 2023 and T&E Care</p>
+    <p style="color: white; margin-top: 0; margin-bottom: 0;">All proceeds to benefit Class of 2023</p>
     <p style="color: white; margin-top: 0;font-size: 20px;"><b>Limited Quantity, Priced to Sell</b></p>
 </div>
 <br/><br/>
@@ -199,7 +199,7 @@
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <div class="row">
                     <div class="column">
-                        <img src="img/maroon tee.jpg" style="height: 150px;" />
+                        <img src="img/Long sleeve sport-tek.jpg" style="height: 150px;" />
                     </div>
                 </div>
                 <h5 style="margin: 0;">Long-Sleeve Shirt</h5>
