--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <br/>
     <img src="img/Grey C logo.jpg" style="height: 150px;" />
     <h4 class="hero-heading" style="color: white;">Conestoga Spiritwear</h4>
-    <p style="color: white; margin-top: 0; margin-bottom: 0;">All proceeds to benefit Class of 2023</p>
+    <p style="color: white; margin-top: 0; margin-bottom: 0;">All proceeds to benefit Class of 2023, 2024 ,2025 and 2026</p>
     <p style="color: white; margin-top: 0;font-size: 20px;"><b>Limited Quantity, Priced to Sell</b></p>
 </div>
 <br/><br/>
@@ -394,7 +394,7 @@
 </div>
 
 <center>
-    <p>We will be doing a COVID-safe pickup.  Instructions will be sent to your email.</p>
+    <p>Pickup instructions will be emailed to you.</p>
     <h4>All sales are final.  There are no exchanges or refunds.</h4>
     <p style="font-size: 10px;">This is not an official TESD website. It is organized by Conestoga parents</p>
 </center>
