--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
                     </div>
                 </div>
                 <h5 style="margin: 0;">Hoodie w/ White Imprint</h5>
+                <p>featherweight/lightweight</p>
                 <p style="font-size: large">$25</p>
             </div>
         </div>
@@ -194,6 +195,7 @@
                     </div>
                 </div>
                 <h5 style="margin: 0;">Hoodie w/ Maroon imprint</h5>
+                <p>featherweight/lightweight</p>
                 <p style="font-size: large">$25</p>
             </div>
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
