--- a/index.html
+++ b/index.html
@@ -85,11 +85,116 @@
     <br/>
     <img src="img/Grey C logo.jpg" style="height: 150px;" />
     <h4 class="hero-heading" style="color: white;">Conestoga Spiritwear</h4>
-    <p style="color: white; margin-top: 0; margin-bottom: 0;">All proceeds to benefit Class of 2023, 2024 ,2025 and 2026</p>
-    <p style="color: white; margin-top: 0;font-size: 20px;"><b>Limited Quantity, Priced to Sell</b></p>
+    <h4 class="hero-heading" style="color: white;">WINTER STOGAWARE SALE</h4>
+    <p style="color: white; margin-top: 0; margin-bottom: 0;">(All proceeds to benefit Class of 2024)</p>
+    <p style="color: white; margin-top: 0;font-size: 12px;"><b>Orders must be place by 12/30/22.  If there is enough interest for a 2nd round of ordering, we will do that at a later time"  Expect shipment by 1/31</b></p>
 </div>
 <br/><br/>
+
 <div class="section" style="padding-top: 0rem;">
+    <div class="container">
+        <div class="row">
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <div class="row">
+                    <div class="column">
+                        <img src="img/sweatshirt.jpg" style="height: 150px;" />
+                    </div>
+                </div>
+                <h5 style="margin: 0;">Sweatshirt</h5>
+                <p style="font-size: large">$35</p>
+            </div>
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <div class="row">
+                    <div class="column">
+                        <img src="img/sweatpants.jpg" style="height: 150px;" />
+                    </div>
+                </div>
+                <h5 style="margin: 0;">Sweatpants</h5>
+                <p style="font-size: large">$30</p>
+            </div>
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <div class="row">
+                    <div class="column one-half">
+                        <img src="img/hat.jpg" style="height: 130px;" />
+                    </div>
+                    <div class="column one-half">
+                        <img src="img/Pom Pom.jpg" style="height: 130px;" />
+                    </div>
+                </div>
+                <h5 style="margin: 0;">Hats</h5>
+                <p style="font-size: large">$20</p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <center>
+                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="9YJ6KDQW94JGA">
+                        <table>
+                        <tr><td><input type="hidden" name="on0" value="Size">Size</td></tr><tr><td><select name="os0">
+                        <option value="S">S $35.00 USD</option>
+                        <option value="M">M $35.00 USD</option>
+                        <option value="L">L $35.00 USD</option>
+                        <option value="XL">XL $35.00 USD</option>
+                        <option value="XXL">XXL $35.00 USD</option>
+                        </select> </td></tr>
+                        <tr><td><input type="hidden" name="on1" value="Email">Email</td></tr><tr><td><input type="text" name="os1" maxlength="200" required></td></tr>
+                        </table>
+                        <input type="hidden" name="currency_code" value="USD">
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                        </form>
+                </center>
+            </div>
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <center>
+                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="C8Y5Y2LPFRJLW">
+                        <table>
+                        <tr><td><input type="hidden" name="on0" value="Size">Size</td></tr><tr><td><select name="os0">
+                        <option value="S">S $30.00 USD</option>
+                        <option value="M">M $30.00 USD</option>
+                        <option value="L">L $30.00 USD</option>
+                        <option value="XL">XL $30.00 USD</option>
+                        <option value="XXL">XXL $30.00 USD</option>
+                        </select> </td></tr>
+                        <tr><td><input type="hidden" name="on1" value="Email">Email</td></tr><tr><td><input type="text" name="os1" maxlength="200" required></td></tr>
+                        </table>
+                        <input type="hidden" name="currency_code" value="USD">
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                        </form>
+                </center>
+            </div>
+            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
+                <center>
+                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                        <input type="hidden" name="cmd" value="_s-xclick">
+                        <input type="hidden" name="hosted_button_id" value="R384K8WH35JL2">
+                        <table>
+                        <tr><td><input type="hidden" name="on0" value="Hat Type">Hat Type</td></tr><tr><td><select name="os0">
+                        <option value="With Pom Pom">With Pom Pom $20.00 USD</option>
+                        <option value="Without Pom Pom">Without Pom Pom $20.00 USD</option>
+                        </select> </td></tr>
+                        <tr><td><input type="hidden" name="on1" value="Email">Email</td></tr><tr><td><input type="text" name="os1" maxlength="200" required></td></tr>
+                        </table>
+                        <input type="hidden" name="currency_code" value="USD">
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                        </form>
+                </center>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="section" style="padding-top: 0rem;">
+    <h4 class="hero-heading" style="color: black;">General Spiritwear</h4>
+    <p style="color: black; margin-top: 0; margin-bottom: 0;">All proceeds to benefit Class of 2023, 2024 ,2025 and 2026</p>
+    <br />
     <div class="container">
         <div class="row">
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
