--- a/index.html
+++ b/index.html
@@ -85,13 +85,14 @@
     <br/>
     <img src="img/Grey C logo.jpg" style="height: 150px;" />
     <h4 class="hero-heading" style="color: white;">Conestoga Spiritwear</h4>
-    <h4 class="hero-heading" style="color: white;">WINTER STOGAWARE SALE</h4>
-    <p style="color: white; margin-top: 0; margin-bottom: 0;">(All proceeds to benefit Class of 2024)</p>
-    <p style="color: white; margin-top: 0;font-size: 12px;"><b>Orders must be place by 12/30/22.  If there is enough interest for a 2nd round of ordering, we will do that at a later time"  Expect shipment by 1/31</b></p>
 </div>
 <br/><br/>
 
 <div class="section" style="padding-top: 0rem;">
+    <h4 class="hero-heading" style="color: black;">WINTER STOGAWARE SALE</h4>
+    <p style="color: black; margin-top: 0; margin-bottom: 0;">(All proceeds to benefit Class of 2024)</p>
+    <p style="color: black; margin-top: 0;font-size: 20px;"><b>Orders must be place by 12/30/22.  If there is enough interest for a 2nd round of ordering, we will do that at a later time  Expect shipment by 1/31</b></p>
+    <br />
     <div class="container">
         <div class="row">
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
@@ -173,11 +174,14 @@
                 <center>
                     <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
                         <input type="hidden" name="cmd" value="_s-xclick">
-                        <input type="hidden" name="hosted_button_id" value="R384K8WH35JL2">
+                        <input type="hidden" name="hosted_button_id" value="C8Y5Y2LPFRJLW">
                         <table>
-                        <tr><td><input type="hidden" name="on0" value="Hat Type">Hat Type</td></tr><tr><td><select name="os0">
-                        <option value="With Pom Pom">With Pom Pom $20.00 USD</option>
-                        <option value="Without Pom Pom">Without Pom Pom $20.00 USD</option>
+                        <tr><td><input type="hidden" name="on0" value="Size">Size</td></tr><tr><td><select name="os0">
+                        <option value="S">S $30.00 USD</option>
+                        <option value="M">M $30.00 USD</option>
+                        <option value="L">L $30.00 USD</option>
+                        <option value="XL">XL $30.00 USD</option>
+                        <option value="XXL">XXL $30.00 USD</option>
                         </select> </td></tr>
                         <tr><td><input type="hidden" name="on1" value="Email">Email</td></tr><tr><td><input type="text" name="os1" maxlength="200" required></td></tr>
                         </table>
@@ -185,11 +189,14 @@
                         <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                         <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                         </form>
+                        
                 </center>
             </div>
         </div>
     </div>
 </div>
+
+<hr style="border: 2px solid #800000;" />
 
 <div class="section" style="padding-top: 0rem;">
     <h4 class="hero-heading" style="color: black;">General Spiritwear</h4>
