--- a/index.html
+++ b/index.html
@@ -174,14 +174,11 @@
                 <center>
                     <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
                         <input type="hidden" name="cmd" value="_s-xclick">
-                        <input type="hidden" name="hosted_button_id" value="C8Y5Y2LPFRJLW">
+                        <input type="hidden" name="hosted_button_id" value="R384K8WH35JL2">
                         <table>
-                        <tr><td><input type="hidden" name="on0" value="Size">Size</td></tr><tr><td><select name="os0">
-                        <option value="S">S $30.00 USD</option>
-                        <option value="M">M $30.00 USD</option>
-                        <option value="L">L $30.00 USD</option>
-                        <option value="XL">XL $30.00 USD</option>
-                        <option value="XXL">XXL $30.00 USD</option>
+                        <tr><td><input type="hidden" name="on0" value="Hat Type">Hat Type</td></tr><tr><td><select name="os0">
+                        <option value="With Pom Pom">With Pom Pom $20.00 USD</option>
+                        <option value="Without Pom Pom">Without Pom Pom $20.00 USD</option>
                         </select> </td></tr>
                         <tr><td><input type="hidden" name="on1" value="Email">Email</td></tr><tr><td><input type="text" name="os1" maxlength="200" required></td></tr>
                         </table>
