--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                         <option value="With Pom Pom">With Pom Pom $20.00 USD</option>
                         <option value="Without Pom Pom">Without Pom Pom $20.00 USD</option>
                         </select> </td></tr>
-                        <tr><td><input type="hidden" name="on1" value="Email">Email</td></tr><tr><td><input type="text" name="os1" maxlength="200" required></td></tr>
+                        <tr><td><input type="hidden" name="on1" value="Email">Email</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
                         </table>
                         <input type="hidden" name="currency_code" value="USD">
                         <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
