--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
 <div class="section" style="padding-top: 0rem;">
     <h4 class="hero-heading" style="color: black;">WINTER STOGAWARE SALE</h4>
-    <p style="color: black; margin-top: 0; margin-bottom: 0;">(All proceeds to benefit Class of 2024)</p>
+    <p style="color: black; margin-top: 0; margin-bottom: 0;">(All proceeds to benefit Class of 2023 and 2024)</p>
     <p style="color: black; margin-top: 0;font-size: 20px;"><b>Orders must be place by 12/30/22.  If there is enough interest for a 2nd round of ordering, we will do that at a later time  Expect shipment by 1/31</b></p>
     <br />
     <div class="container">
@@ -197,7 +197,8 @@
 
 <div class="section" style="padding-top: 0rem;">
     <h4 class="hero-heading" style="color: black;">General Spiritwear</h4>
-    <p style="color: black; margin-top: 0; margin-bottom: 0;">All proceeds to benefit Class of 2023, 2024 ,2025 and 2026</p>
+    <p style="color: black; margin-top: 0; margin-bottom: 0;">All proceeds to benefit Class of 2023, 2024, 2025 and 2026</p>
+    <p style="color: black; margin-top: 0; margin-bottom: 0;">Limited quantities available</p>
     <br />
     <div class="container">
         <div class="row">
