--- a/index.html
+++ b/index.html
@@ -115,13 +115,8 @@
             </div>
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <div class="row">
-                    <div class="column one-half">
-                        <img src="img/hat.jpg" style="height: 130px;" />
-                    </div>
-                    <div class="column one-half">
-                        <img src="img/Pom Pom.jpg" style="height: 130px;" />
-                    </div>
-                </div>
+                    <img src="img/hat.jpg" style="height: 150px;" />
+                 </div>
                 <h5 style="margin: 0;">Hats</h5>
                 <p style="font-size: large">$20</p>
             </div>
@@ -176,17 +171,11 @@
                         <input type="hidden" name="cmd" value="_s-xclick">
                         <input type="hidden" name="hosted_button_id" value="R384K8WH35JL2">
                         <table>
-                        <tr><td><input type="hidden" name="on0" value="Hat Type">Hat Type</td></tr><tr><td><select name="os0">
-                        <option value="With Pom Pom">With Pom Pom $20.00 USD</option>
-                        <option value="Without Pom Pom">Without Pom Pom $20.00 USD</option>
-                        </select> </td></tr>
-                        <tr><td><input type="hidden" name="on1" value="Email">Email</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
+                        <tr><td><input type="hidden" name="on0" value="Email">Email</td></tr><tr><td><input type="text" name="os0" maxlength="200" required></td></tr>
                         </table>
-                        <input type="hidden" name="currency_code" value="USD">
                         <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                         <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                         </form>
-                        
                 </center>
             </div>
         </div>
@@ -223,11 +212,11 @@
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <div class="row">
                     <div class="column">
-                        <img src="img/hoodie w white.jpg" style="height: 150px;" />
+                        <img src="img/Magnet (1).JPG" style="height: 150px;" />
                     </div>
                 </div>
-                <h5 style="margin: 0;">Hoodie w/ White Imprint</h5>
-                <p style="font-size: large">$25</p>
+                <h5 style="margin: 0;">Magnet</h5>
+                <p style="font-size: large">$5</p>
             </div>
         </div>
 
@@ -240,7 +229,6 @@
                         <table>
                         <tr><td><input type="hidden" name="on0" value="Color/Size">Color/Size</td></tr><tr><td><select name="os0">
                         <option value="S">S $15.00 USD</option>
-                        <option value="M">M $15.00 USD</option>
                         <option value="L">L $15.00 USD</option>
                         <option value="XL">XL $15.00 USD</option>
                         <option value="XXL">XXL $15.00 USD</option>
@@ -260,11 +248,8 @@
                         <input type="hidden" name="hosted_button_id" value="SDG5QHE6HF7ZY">
                         <table>
                         <tr><td><input type="hidden" name="on0" value="Color/Size">Color/Size</td></tr><tr><td><select name="os0">
-                        <option value="S">S $15.00 USD</option>
-                        <option value="M">M $15.00 USD</option>
                         <option value="L">L $15.00 USD</option>
                         <option value="XL">XL $15.00 USD</option>
-                        <option value="XXL">XXL $15.00 USD</option>
                         </select> </td></tr>
                         <tr><td><input type="hidden" name="on1" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os1" maxlength="200" required></td></tr>
                         </table>
@@ -276,18 +261,13 @@
             </div>
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
                 <center>
-                    <p>featherweight/lightweight</p>
+                    <p style="font-size: small">While Supplies Last</p>
                     <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
                         <input type="hidden" name="cmd" value="_s-xclick">
-                        <input type="hidden" name="hosted_button_id" value="LUAB3FX2ZKJ8N">
+                        <input type="hidden" name="hosted_button_id" value="EQ8TCQ9F65TFY">
                         <table>
-                        <tr><td><input type="hidden" name="on0" value="Size">Size</td></tr><tr><td><select name="os0">
-                        <option value="M">M $25.00 USD</option>
-                        <option value="L">L $25.00 USD</option>
-                        </select> </td></tr>
-                        <tr><td><input type="hidden" name="on1" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os1" maxlength="200"></td></tr>
+                        <tr><td><input type="hidden" name="on0" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os0" maxlength="200" required></td></tr>
                         </table>
-                        <input type="hidden" name="currency_code" value="USD">
                         <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                         <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                         </form>
@@ -333,10 +313,10 @@
                     <p>featherweight/lightweight</p>
                     <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
                         <input type="hidden" name="cmd" value="_s-xclick">
-                        <input type="hidden" name="hosted_button_id" value="AVG8PDC2CC5D6">
+                        <input type="hidden" name="hosted_button_id" value="Q6V9AVMVXDVSN">
                         <table>
                         <tr><td><input type="hidden" name="on0" value="Size">Size</td></tr><tr><td><select name="os0">
-                        <option value="S">S $25.00 USD</option>
+                        <option value="L">L $25.00 USD</option>
                         <option value="XL">XL $25.00 USD</option>
                         <option value="XXL">XXL $25.00 USD</option>
                         </select> </td></tr>
@@ -346,6 +326,7 @@
                         <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
                         <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
                         </form>
+                        
                 </center>
             </div>
             <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
@@ -355,7 +336,6 @@
                         <input type="hidden" name="hosted_button_id" value="Q6V9AVMVXDVSN">
                         <table>
                         <tr><td><input type="hidden" name="on0" value="Size">Size</td></tr><tr><td><select name="os0">
-                        <option value="S">S $25.00 USD</option>
                         <option value="L">L $25.00 USD</option>
                         <option value="XL">XL $25.00 USD</option>
                         <option value="XXL">XXL $25.00 USD</option>
@@ -453,37 +433,6 @@
                     <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
                         <input type="hidden" name="cmd" value="_s-xclick">
                         <input type="hidden" name="hosted_button_id" value="WDSKGXDQ26G5S">
-                        <table>
-                        <tr><td><input type="hidden" name="on0" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os0" maxlength="200" required></td></tr>
-                        </table>
-                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-                        </form>
-                </center>
-            </div>
-        </div>
-    </div>
-
-    <div class="container">
-        <div class="row">
-            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
-                <div class="row">
-                    <div class="column">
-                        <img src="img/Magnet (1).JPG" style="height: 150px;" />
-                    </div>
-                </div>
-                <h5 style="margin: 0;">Magnet</h5>
-                <p style="font-size: large">$5</p>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="one-third column" style="border-left: 3px solid black; border-right: 3px solid black;">
-                <center>
-                    <p style="font-size: small">While Supplies Last</p>
-                    <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
-                        <input type="hidden" name="cmd" value="_s-xclick">
-                        <input type="hidden" name="hosted_button_id" value="EQ8TCQ9F65TFY">
                         <table>
                         <tr><td><input type="hidden" name="on0" value="Email (required)">Email (required)</td></tr><tr><td><input type="text" name="os0" maxlength="200" required></td></tr>
                         </table>
