update shipment info

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 <div class="section" style="padding-top: 0rem;">
     <h4 class="hero-heading" style="color: black;">WINTER STOGAWARE SALE</h4>
     <p style="color: black; margin-top: 0; margin-bottom: 0;">(All proceeds to benefit Class of 2023 and 2024)</p>
-    <p style="color: black; margin-top: 0;font-size: 20px;"><b>Orders must be place by 12/30/22.  If there is enough interest for a 2nd round of ordering, we will do that at a later time  Expect shipment by 1/31</b></p>
+    <p style="color: black; margin-top: 0;font-size: 20px;"><b>Orders must be placed by 1/30/23 with delivery date by end of February. </b></p>
     <br />
     <div class="container">
         <div class="row">
